tests/integration/traits/errors/incomplete-impl/main.cx
trait C {
  c: self
}

impl C Number {
}
